commit on 'diego'

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,6 +1,15 @@
 - id: read_more
   translation: Read More
 
+- id: more_details
+  translation: More Details
+
+- id: buy_now
+  translation: Buy Now
+
+- id: get_into
+  translation: Get Into
+
 - id: contact_form
   translation: Contact Form
 
