--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -1,6 +1,15 @@
 - id: read_more
   translation: Lire la suite
 
+- id: more_details
+  translation: Plus de Détails
+
+- id: buy_now
+  translation: Acheter Maintenant
+
+- id: get_into
+  translation: Entrer
+
 - id: contact_form
   translation: Formulaire de contact
 
