--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -35,7 +35,7 @@
   translation: Ultimos Articulos
 
 - id: categories
-  translation: Catégorias
+  translation: Categorías
 
 - id: tags
   translation: Etiquetas
